[gd_scene load_steps=2 format=3 uid="uid://ct438wswwq7et"]

[ext_resource type="Script" path="res://scenes/interfaces/main_menu/main_menu.gd" id="1_t3ywm"]

[node name="MainMenu" type="ColorRect"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
script = ExtResource("1_t3ywm")
first_level = "res://scenes/levels/level_1.tscn"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="NewGame" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
